k8s/authentik/authentik-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-route
  namespace: authentik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auth.oliverilp.ee
    external-dns.alpha.kubernetes.io/target: hgc09j4m350.sn.mynetname.net
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  parentRefs:
    - name: traefik-public-gateway
      namespace: traefik
  hostnames:
    - auth.oliverilp.ee
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
